# LogViewer

./: .gitignore  Cargo.toml  colors.txt  queries.txt
.github/workflows/: rust.yml
loguage/tree-sitter-loguage/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example  go.mod  gpt prompt.txt  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
loguage/tree-sitter-loguage/bindings/c/: tree-sitter-loguage.pc.in
loguage/tree-sitter-loguage/bindings/go/: binding.go  binding_test.go
loguage/tree-sitter-loguage/bindings/node/: binding.cc  index.js
loguage/tree-sitter-loguage/bindings/python/tests/: test_binding.py
loguage/tree-sitter-loguage/bindings/python/tree_sitter_loguage/: __init__.py  binding.c
loguage/tree-sitter-loguage/bindings/rust/: build.rs  lib.rs
loguage/tree-sitter-loguage/bindings/swift/TreeSitterLoguage/: loguage.h
loguage/tree-sitter-loguage/bindings/swift/TreeSitterLoguageTests/: TreeSitterLoguageTests.swift
loguage/tree-sitter-loguage/src/: grammar.json  node-types.json  parser.c
src/: animal.rs  colors.rs  indexer.rs  log_loader.rs  log_viewer.rs  main.rs  ui_ext.rs
src/ext/: mod.rs  string_ext.rs  ui_ext.rs
src/loguage/: exec.rs  interpreter.rs  mod.rs
