[package]
name = "logviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "*"
egui_extras = { version = "*", features = ["image"] }
egui_tiles = "*"
rand = "*"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"]}
eframe = "*"
tantivy = "0.22.0"
egui_table = "0.2.0"
image = "0.25.5"
egui_material_icons = { version = "0.3.0" }
egui_plot = "0.31.0"